# commodity-prices

./: .gitignore  model.py  pyproject.toml
configs/: .gitignore  baseline.yaml
scripts/: make_core_figures.py  make_futures_figures.py  make_return_figures.py  solve_model.py
src/commodity/: config.py  diagnostics.py  discretization.py  io.py  kernels.py  model.py  pricing.py  utils.py
src/commodity.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/commodity/__pycache__/: kernels._compute_ee_values-140.py313.1.nbc  kernels._compute_ee_values-140.py313.nbi  kernels._compute_p_uc_m-272.py313.1.nbc  kernels._compute_p_uc_m-272.py313.nbi  kernels._convenience_yield_kernel-310.py313.1.nbc  kernels._convenience_yield_kernel-310.py313.nbi  kernels._egm_interpolate-212.py313.1.nbc  kernels._egm_interpolate-212.py313.nbi  kernels._egm_step-175.py313.1.nbc  kernels._egm_step-175.py313.nbi  kernels._expect_next_policy-108.py313.1.nbc  kernels._expect_next_policy-108.py313.2.nbc  kernels._expect_next_policy-108.py313.nbi  kernels._futures_curve_at_state-347.py313.1.nbc  kernels._futures_curve_at_state-347.py313.2.nbc  kernels._futures_curve_at_state-347.py313.nbi  kernels._futures_surface_fixed_q_at_horizon-495.py313.1.nbc  kernels._futures_surface_fixed_q_at_horizon-495.py313.2.nbc  kernels._futures_surface_fixed_q_at_horizon-495.py313.nbi  kernels._futures_surface_fixed_z_at_horizon-423.py313.1.nbc  kernels._futures_surface_fixed_z_at_horizon-423.py313.2.nbc  kernels._futures_surface_fixed_z_at_horizon-423.py313.nbi  kernels._interp_idx_weight-9.py313.1.nbc  (+7 more)
(+4 files in other folders)
