[project]
name = "commodity"
version = "0.1.0"
description = "Recursive commodity pricing model with storage, futures, and risk premia"
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "scipy",
    "numba",
    "matplotlib",
    "pyyaml",
]

[tool.setuptools.packages.find]
where = ["src"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"